...
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.naozumi.izinboss.view.entry.validation.CustomEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>
...
        android:layout_marginTop="8dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.naozumi.izinboss.view.entry.validation.CustomEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck"/>
...
        android:text="Forgot Password?"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="@id/til_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
...
        app:icon="@drawable/google"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_create_account"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Don't have an account yet?"
        android:textSize="12sp"
...
