...
    <string name="app_name">IzinBoss</string>

    <!-- Layout -->
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Let\'s get you started with</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="powered_by_dicoding">Powered by Dicoding Story API v1</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_new_story">Add New Story</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="input_email_password">Please input your email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create_account">Create a New Account to Continue</string>
...
