<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".view.leaverequest.RequestLeaveFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/til_add_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/actv_add_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Leave type"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/til_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperText="Double Tap to show calendar"
        app:helperTextTextColor="@color/dark_blue"
        app:endIconDrawable="@drawable/baseline_calendar_month_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_type" >

        <AutoCompleteTextView
            android:id="@+id/ed_start_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="Start date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/til_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperText="Double Tap to show calendar"
        app:helperTextTextColor="@color/dark_blue"
        app:endIconDrawable="@drawable/baseline_calendar_month_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_start_date" >

        <AutoCompleteTextView
            android:id="@+id/ed_end_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="End date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperText="Max Character Limit: 100"
        app:helperTextTextColor="@color/yellowish_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_end_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_reason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="Add reason"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:overScrollMode="ifContentScrolls"
            android:padding="15dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_request_leave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/request_leave"
        app:layout_constraintTop_toBottomOf="@id/til_add_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="339dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>