<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_company"
        android:icon="@drawable/baseline_company_24"
        android:title="@string/company" />

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="Logout" />
        </menu>
    </item>
</menu>